fixed spacing issue on next slid button scale and added flipping card on click

--- a/src/app/components/flashcards/flashcards.component.scss
+++ b/src/app/components/flashcards/flashcards.component.scss
@@ -16,13 +16,13 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-// .flip-card-hover {
-//   transform: rotateY(180deg);
-// }
-
-.flip-card:hover .flip-card-inner {
+.flipped {
   transform: rotateY(180deg);
 }
+
+// .flip-card:hover .flip-card-inner {
+//   transform: rotateY(180deg);
+// }
 
 .flip-card-front, .flip-card-back {
   position: absolute;
@@ -45,11 +45,16 @@
   color: rgb(248,249,250);
   height: 300px;
   font-size: 3rem;
-  transition: all .2s ease-in-out; 
 }
 
-.next-slide:hover { 
-  transform: scale(1.3); 
+.bi {
+  transition: all .2s ease-in-out;
+}
+
+.next-slide:hover {
+  .bi {
+    transform: scale(1.2); 
+  }
 }
 
 .slider {
